--- a/package.json
+++ b/package.json
@@ -16,12 +16,25 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "node test/run.js"
+    "test": "node test/run.js",
+    "build": "npx babel index.js --out-file index-compiled.js"
   },
+  "main": "index-compiled.js",
   "peerDependencies": {
     "acorn": "^6.0.0 || ^7.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-classes": "^7.9.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
+    "@babel/plugin-transform-proto-to-assign": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
     "acorn": "^7.0.0"
-  }
+  },
+  "dependencies": {}
 }
